fixed path in links, hide&seek game and mediaqueries

--- a/hide&seek/hide&seek.css
+++ b/hide&seek/hide&seek.css
@@ -10,7 +10,9 @@
 .text-content p {
 	display: block;
 }
-
+.after-found {
+	visibility: hidden;
+}
 .hidden-thing {
 	width: 150px;
 	height: 150px;
