--- a/queries.css
+++ b/queries.css
@@ -79,14 +79,14 @@
 		left: 0;
 		top: 0;
 		width: 100%;
-		height: 100vh;
+		height: 95vh;
 		transform: translateX(100%);
 
 		display: flex;
 		align-items: center;
 		justify-content: center;
 
-		background-color: rgb(125, 92, 139);
+		background-color: rgb(129, 94, 144);
 		border-radius: 8px;
 		/* Hide the navigation */
 		/* allows no transition at all*/
@@ -115,6 +115,9 @@
 	}
 	.main-nav-list {
 		flex-direction: column;
+		align-items: center;
+		font-size: 28px;
+		gap: 44px;
 	}
 	main {
 		margin: 36px 82px;
